# encodapy

./: .buildinfo  .gitignore  .pylintrc  README.md  basic_service.html  components.html  components_models.html  config_models.html  dockerfile  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  readme.html  readme.md  search.html  searchindex.js  setup.cfg  utils_models.html
.doctrees/: basic_service.doctree  components.doctree  components_models.doctree  config_models.doctree  index.doctree  readme.doctree  utils_models.doctree
.doctrees/_generated/: COMPONENTS_README_FOR_DOCS.doctree  README_FOR_DOCS.doctree
.doctrees/basic_service/: config_models.doctree  interfaces.doctree  internal_models.doctree  utils_models.doctree
.doctrees/components/: built_in_thermal_storage_models.doctree  built_in_two_point_controller_models.doctree  components.doctree  components_models.doctree
.github/workflows/: pylint.yml  pypi.yml
_generated/: COMPONENTS_README_FOR_DOCS.html  COMPONENT_Thermal_Storage_README_FOR_DOCS.html  COMPONENT_Two_Point_Controller_README_FOR_DOCS.html  README_FOR_DOCS.html
_modules/: index.html
_sources/: basic_service.rst.txt  components_models.rst.txt  index.rst.txt
_sources/_generated/: COMPONENTS_README_FOR_DOCS.md.txt  README_FOR_DOCS.md.txt
_sources/basic_service/: utils_models.rst.txt
basic_service/: config_models.html  interfaces.html  internal_models.html  utils_models.html
components/: built_in_components.html  built_in_thermal_storage.html  built_in_thermal_storage_models.html  built_in_two_point_controller.html  built_in_two_point_controller_models.html  components.html  components_models.html
controller/: config.json
controller_software/config/: __init__.py  default_values.py  models.py  types.py
controller_software/service/: __init__.py  basic_service.py
controller_software/utils/: cratedb.py  error_handling.py  fiware_auth.py  health.py  logging.py  models.py  timeunit.py  units.py
docs/scripts/: generate_readme_for_docs.py
docs/source/: basic_service.rst  components.rst  conf.py  config_models.rst  index.rst
encodapy/components/: __init__.py  basic_component.py  basic_component_config.py  component_loader.py  components_basic_config.py  readme.md  thermal_storage.py  thermal_storage_config.py
encodapy/config/: default_values.py  env_values.py  models.py  types.py
encodapy/service/: basic_service.py  component_runner_service.py
encodapy/utils/: cratedb.py  datapoints.py  error_handling.py  mediums.py  models.py  units.py
examples/: config.ipynb  config.json  readme.md
examples/01_config/: config.ipynb  config.json  config_doc_creation.py  config_schema.drawio  readme.md  schema.yml
examples/02_datatransfer/: DataTransferModel.drawio  DataTransferModel.ipynb  InputDataModel.drawio  InputDataModel.ipynb  readme.md
examples/02_simple_service/: configure_fiware_platform.ipynb  example_service.py  readme.md
examples/03_interface_file/: readme.md
examples/03_interfaces/: inputs_csv-file_interface_example.csv  inputs_json-file_interface_example.json  outputs_dhw_calculation_example.json  readme.md  (+2 more)
service_main/: main.py  readme.md
(+66 files in other folders)
