[metadata]
name = n5geh.system_controller
version = 0.1.0
author = Martin Altenburger
author-email = martin.altenburger@tu-berlin.de
license =
description =  Tool for scalable system control
long_description = file: README.md
url = 
requires-python = >= 3.9

[options]
packages = find:
python_requires = >=3.9

[options.packages.find]
where = .